server: depend on `alcotest`

--- a/cn-lsp/server/dune-project
+++ b/cn-lsp/server/dune-project
@@ -20,6 +20,10 @@
     (>= 4.14.1)
     (< 6.0.0)))
   ;;
+  (alcotest
+   (and
+    (>= 1.7.0)
+    (< 2.0.0)))
   (base
    (and
     (>= v0.16.3)
