--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -56,6 +56,12 @@
                 }
             }
         },
+        "debuggers": [
+            {
+                "type": "CN",
+                "label": "CN Debugger"
+            }
+        ],
         "grammars": [
             {
                 "path": "./syntaxes/cn.tmLanguage.json",
