client: declare and register debugging facilities

--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -51,6 +51,12 @@
                 }
             }
         },
+        "debuggers": [
+            {
+                "type": "CN",
+                "label": "CN Debugger"
+            }
+        ],
         "grammars": [
             {
                 "path": "./syntaxes/cn.tmLanguage.json",
