--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -48,6 +48,11 @@
                     "type": "string",
                     "default": null,
                     "description": "Location of the LSP server"
+                },
+                "CN.showGillianDebugLenses": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Show code lenses that activate Gillian debugging. Note that this functionality relies on the Gillian debugging extension (https://gillianplatform.github.io/sphinx/debugger.html) being installed, or run in a development host context."
                 }
             }
         },
