--- a/telemetry/dune-project
+++ b/telemetry/dune-project
@@ -17,4 +17,12 @@
   (base
    (and
     (>= v0.16.3)
-    (< v0.18)))))
+    (< v0.18)))
+  (ppx_deriving_yojson
+   (and
+    (>= 3.0.0)
+    (< 4.0.0)))
+  (yojson
+   (and
+    (>= 2.0.0)
+    (< 3.0.0)))))
