--- a/telemetry/telemetry.opam
+++ b/telemetry/telemetry.opam
@@ -7,6 +7,8 @@ depends: [
   "ocaml"
   "dune" {>= "3.16"}
   "base" {>= "v0.16.3" & < "v0.18"}
+  "ppx_deriving_yojson" {>= "3.0.0" & < "4.0.0"}
+  "yojson" {>= "2.0.0" & < "3.0.0"}
   "odoc" {with-doc}
 ]
 build: [
