--- a/telemetry/test/dune
+++ b/telemetry/test/dune
@@ -1,2 +1,5 @@
 (test
- (name test_telemetry))
+ (name main)
+ (libraries telemetry alcotest base ppx_deriving_yojson.runtime unix yojson)
+ (preprocess
+  (pps ppx_deriving.eq ppx_deriving.show ppx_deriving_yojson)))
