telemetry: add/pin straggling dependencies

--- a/telemetry/dune-project
+++ b/telemetry/dune-project
@@ -15,6 +15,10 @@
  (depends
   ocaml
   dune
+  (alcotest
+   (and
+    (>= 1.6.0)
+    (< 2.0.0)))
   (base
    (and
     (>= v0.16.3)
@@ -23,6 +27,14 @@
    (and
     (>= 3.0.0)
     (< 4.0.0)))
+  (ppx_hash
+   (and
+    (>= v0.16.3)
+    (< v0.18)))
+  (ppx_sexp_conv
+   (and
+    (>= v0.16.3)
+    (< v0.18)))
   (yojson
    (and
     (>= 2.0.0)
