--- a/.github/workflows/telemetry-ci.yml
+++ b/.github/workflows/telemetry-ci.yml
@@ -35,11 +35,10 @@ jobs:
         id: cache-opam-restore
         uses: actions/cache/restore@v4
         with:
-          path: telemetry/_opam
-          key: ${{ matrix.ocaml-version }}-${{ hashFiles('telemetry/telemetry.opam.locked') }}
+          path: ./_opam
+          key: ${{ matrix.ocaml-version }}-${{ hashFiles('telemetry.opam.locked') }}
 
       - name: Install telemetry dependencies
-        working-directory: telemetry
         # If we restored a `_opam` directory here, we need not (and should not)
         # try to create a switch. The presence of `_opam` seems basically
         # isomorphic to the presence of a switch, and opam will fail to `create`
@@ -50,13 +49,13 @@ jobs:
         if: steps.cache-opam-restore.outputs.cache-hit != 'true'
         uses: actions/cache/save@v4
         with:
-          path: telemetry/_opam
+          path: ./_opam
           key: ${{ steps.cache-opam-restore.outputs.cache-primary-key }}
 
       - name: Build telemetry
-        working-directory: telemetry
+        working-directory: ./telemetry
         run: eval $(opam env) && dune build
 
       - name: Run telemetry tests
-        working-directory: telemetry
+        working-directory: ./telemetry
         run: eval $(opam env) && dune test
