ci: stop manually switching and caching `_opam`
It seems like, with the changes made to package organization, the
`ocaml/setup-ocaml` action might do this for us

--- a/.github/workflows/telemetry-ci.yml
+++ b/.github/workflows/telemetry-ci.yml
@@ -31,26 +31,8 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-version }}
 
-      - name: Restore `_opam`
-        id: cache-opam-restore
-        uses: actions/cache/restore@v4
-        with:
-          path: ./_opam
-          key: ${{ matrix.ocaml-version }}-${{ hashFiles('telemetry.opam.locked') }}
-
       - name: Install telemetry dependencies
-        # If we restored a `_opam` directory here, we need not (and should not)
-        # try to create a switch. The presence of `_opam` seems basically
-        # isomorphic to the presence of a switch, and opam will fail to `create`
-        # a new switch if one is already present.
-        run: ls _opam || opam switch create . ocaml.${{ matrix.ocaml-version }} --deps-only --locked -y
-
-      - name: Cache `_opam`
-        if: steps.cache-opam-restore.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v4
-        with:
-          path: ./_opam
-          key: ${{ steps.cache-opam-restore.outputs.cache-primary-key }}
+        run: opam install ./telemetry.opam --deps-only --locked -y
 
       - name: Build telemetry
         working-directory: ./telemetry
