--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -34,26 +34,8 @@ jobs:
       - name: Link lockfile
         run: ln -s cn-lsp.opam.locked-${{ matrix.ocaml-version }} cn-lsp.opam.locked
 
-      - name: Restore `_opam`
-        id: cache-opam-restore
-        uses: actions/cache/restore@v4
-        with:
-          path: ./_opam
-          key: ${{ matrix.ocaml-version }}-${{ hashFiles('cn-lsp.opam.locked') }}
-
       - name: Install server dependencies
-        # If we restored a `_opam` directory here, we need not (and should not)
-        # try to create a switch. The presence of `_opam` seems basically
-        # isomorphic to the presence of a switch, and opam will fail to `create`
-        # a new switch if one is already present.
-        run: ls _opam || opam switch create . ocaml.${{ matrix.ocaml-version }} --deps-only --locked -y
-
-      - name: Cache `_opam`
-        if: steps.cache-opam-restore.outputs.cache-hit != 'true'
-        uses: actions/cache/save@v4
-        with:
-          path: ./_opam
-          key: ${{ steps.cache-opam-restore.outputs.cache-primary-key }}
+        run: opam install ./cn-lsp.opam --deps-only --locked -y
 
       - name: Build server
         working-directory: ./cn-lsp
