--- a/cn-lsp/lib/dune
+++ b/cn-lsp/lib/dune
@@ -1,6 +1,15 @@
 (library
  (name cnlsp)
- (libraries base cn linol linol-lwt lsp telemetry))
+ (libraries
+  base
+  cn
+  linol
+  linol-lwt
+  lsp
+  ppx_deriving_yojson.runtime
+  telemetry)
+ (preprocess
+  (pps ppx_deriving_yojson)))
 
 (env
  (dev
