--- a/cn-lsp/lib/dune
+++ b/cn-lsp/lib/dune
@@ -9,7 +9,7 @@
   ppx_deriving_yojson.runtime
   telemetry)
  (preprocess
-  (pps ppx_deriving_yojson)))
+  (pps ppx_deriving.eq ppx_deriving.show ppx_deriving_yojson)))
 
 (env
  (dev
