--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -48,6 +48,11 @@
                     "type": "string",
                     "default": null,
                     "description": "Location of the LSP server"
+                },
+                "CN.telemetryDir": {
+                    "type": "string",
+                    "default": null,
+                    "description": "Where to store telemetry. Changes take effect on server start/restart."
                 }
             }
         },
