server: add semantic token generation to "un-highlight" comments
The idea here is to let clients define all possible comment syntaxes, and for
the server to disable the one(s) a user doesn't want to see. If this proves
fiddly, we may want to strip the client of highlighting responsibility entirely
and have the server handle it.

--- a/cn-lsp/lib/dune
+++ b/cn-lsp/lib/dune
@@ -1,6 +1,8 @@
 (library
  (name cnlsp)
- (libraries base cn linol linol-lwt lsp))
+ (libraries base cn linol linol-lwt lsp)
+ (preprocess
+  (pps ppx_deriving.enum ppx_enumerate)))
 
 (env
  (dev
