client: new command to run CN on one function

--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -29,6 +29,10 @@
             {
                 "command": "CN.runOnFile",
                 "title": "CN: Run CN on the current file"
+            },
+            {
+                "command": "CN.runOnFunction",
+                "title": "CN: Run CN on the specified function"
             }
         ],
         "configuration": {
