--- a/telemetry.opam
+++ b/telemetry.opam
@@ -11,6 +11,7 @@ depends: [
   "ppx_deriving_yojson" {>= "3.0.0" & < "4.0.0"}
   "ppx_hash" {>= "v0.16.0" & < "v0.18"}
   "ppx_sexp_conv" {>= "v0.16.0" & < "v0.18"}
+  "shell" {>= "v0.16.0" & < "v0.18"}
   "yojson" {>= "2.0.0" & < "3.0.0"}
   "odoc" {with-doc}
 ]
