--- a/cn-lsp.opam
+++ b/cn-lsp.opam
@@ -15,6 +15,7 @@ depends: [
   "linol-lwt" {>= "0.6" & < "0.7"}
   "logs" {>= "0.7.0" & < "1.0.0"}
   "lsp" {>= "1.17.0" & < "2.0.0"}
+  "shell" {>= "v0.16.0" & < "v0.18"}
   "telemetry" {= "dev"}
   "odoc" {with-doc}
 ]
