--- a/cn-lsp/lib/dune
+++ b/cn-lsp/lib/dune
@@ -7,6 +7,7 @@
   linol-lwt
   lsp
   ppx_deriving_yojson.runtime
+  shell.filename_extended
   telemetry)
  (preprocess
   (pps ppx_deriving.eq ppx_deriving.show ppx_deriving_yojson)))
