--- a/cn-lsp.opam
+++ b/cn-lsp.opam
@@ -7,6 +7,8 @@ authors: ["Sam Cowger"]
 depends: [
   "dune" {>= "3.16"}
   "ocaml" {>= "4.14.1" & < "6.0.0"}
+  "alcotest" {>= "1.6.0" & < "2.0.0"}
+  "alcotest-lwt" {>= "1.6.0" & < "2.0.0"}
   "base" {>= "v0.16.3" & < "v0.18"}
   "cerberus-lib" {= "ef237b3"}
   "cn" {= "bf9f700"}
