ci, client: fix "runtime" directory specification
In #191, I misunderstood the change in semantics alluded to in
https://github.com/rems-project/cerberus/commit/7d7271caa0d1c415f6c1088716627a0d0c29224d.
`CERB_INSTALL_PREFIX` is not meant to refer to a location like
`<opam-directory>/lib/cerberus-lib/runtime`, but rather to `<opam-directory>`
itself, since Cerberus will unconditionally append `/lib/cerberus-lib/runtime`
to whatever path is specified.

Accommodating this also means that our CI's bundling process needs to
change. Since Cerberus expects to find its runtime files at a specific path, we
need to mimic `opam`'s directory structure to replicate that path.

--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -38,11 +38,6 @@
         "configuration": {
             "title": "CN",
             "properties": {
-                "CN.cerbRuntime": {
-                    "type": "string",
-                    "default": null,
-                    "description": "Location of Cerberus runtime files"
-                },
                 "CN.reportDir": {
                     "type": "string",
                     "default": null,
@@ -52,6 +47,11 @@
                     "type": "boolean",
                     "default": false,
                     "description": "Run CN whenever a file is saved"
+                },
+                "CN.runtimeDir": {
+                    "type": "string",
+                    "default": null,
+                    "description": "Location of (`opam` or `opam`-like) directory containing Cerberus runtime files"
                 },
                 "CN.serverPath": {
                     "type": "string",
