--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,8 @@ jobs:
         working-directory: ./cn-client
         run: |
           cp ../_opam/bin/cn-lsp-server cn-lsp-server
-          cp -r ../_opam/lib/cerberus-lib/runtime cerb-runtime
+          mkdir -p fake-opam/lib/cerberus-lib
+          cp -r ../_opam/lib/cerberus-lib/runtime ./fake-opam/lib/cerberus-lib/runtime
           npm run dist
 
       - name: Upload artifacts
