client: recognize "CN.testFunction" command
Additionally, define schemas for parameters of and responses to this command in
the client and server.

This dispatches a "$/cnTestGen" request to the server, which it doesn't yet
recognize.

--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -27,6 +27,10 @@
     "contributes": {
         "commands": [
             {
+                "command": "CN.testFunction",
+                "title": "CN: Use CN to test the specified function"
+            },
+            {
                 "command": "CN.verifyFile",
                 "title": "CN: Use CN to verify all functions in the current file"
             },
