client: launch task upon receipt of testing entrypoint

--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -115,7 +115,12 @@
             "files.associations": {
                 "*.h": "c"
             }
-        }
+        },
+        "taskDefinitions": [
+            {
+                "type": "cnTest"
+            }
+        ]
     },
     "scripts": {
         "compile": "tsc --build",
