--- a/cn-client/package.json
+++ b/cn-client/package.json
@@ -27,6 +27,10 @@
     "contributes": {
         "commands": [
             {
+                "command": "CN.testFile",
+                "title": "CN: Use CN to test all functions in the current file"
+            },
+            {
                 "command": "CN.testFunction",
                 "title": "CN: Use CN to test the specified function"
             },
